<resources>
    <string name="app_name">Pushy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="details_alarm_name">Alarm Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>

    <string name="alarm_text">Alarm!</string>
    <string name="zero_time">00 : 00</string>
    <string name="alarm_name">Alarm name</string>
    <string name="dismiss_alarm">Dismiss</string>
    <string name="medium_text">Medium Text</string>
    <string name="letter_sun">S</string>
    <string name="letter_mon">M</string>
    <string name="letter_tue">T</string>
    <string name="letter_wed">W</string>
    <string name="letter_thu">T</string>
    <string name="letter_fri">F</string>
    <string name="letter_sat">S</string>
    <string name="toggle_button">ToggleButton</string>
    <string name="default_text">default</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="save_alarm">Save Alarm</string>

    <string name="alarm_question">A typical alarm question goes here.</string>
    <string name="create_alarm">Create alarm</string>
    <string name="view_notifications">View notifications</string>
    <string name="dismiss">Dismiss</string>
    <string name="answer">Answer</string>
</resources>