<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/alarm_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/alarm_text"
        android:textSize="38dp" />

    <TextView
        android:id="@+id/alarm_screen_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/alarm_screen_button"
        android:layout_below="@+id/alarm_screen_title"
        android:layout_marginTop="28dp"
        android:text="@string/zero_time"
        android:textSize="52dp" />

    <TextView
        android:id="@+id/alarm_screen_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarm_screen_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/alarm_name" />

    <TextView
        android:id="@+id/alarm_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarm_screen_name"
        android:layout_centerHorizontal="true"
        android:text="@string/alarm_question" />

    <EditText
        android:id="@+id/alarm_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/alarm_screen_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/alarm_screen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="106dp"
        android:text="Dismiss"
        android:textSize="38dp" />

</RelativeLayout>